--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+.html{
+    background-color: azure;
+}
+
 .header{
     display: flex;
     background-color:orange;
@@ -23,13 +27,11 @@
     padding: 10px;
 }
 .rest1{
-    width: 200px;
-    height: 300px;
-    background-color: antiquewhite;
-    padding: 5px;
-    margin: 5px;
+    width: auto;
     overflow: hidden;
-    
+    background-color:bisque;
+    padding: 5px;
+    margin: 5px;    
 }
 .rest1:hover{
     border: 1px solid black;
@@ -40,5 +42,6 @@
     flex-wrap: wrap;
 }
 .img1{
-    object-fit:cover;
+    width: 300px;
+    
 }
