--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 
 .header{
     display: flex;
-    background-color:orange;
+    background-color:rgb(255, 136, 0);
     justify-content: space-between;
     border: 1px solid black;
 }
@@ -23,15 +23,14 @@
     font-size: large;
     list-style-type: none;
 }
-.search{
-    padding: 10px;
-}
 .rest1{
-    width: auto;
+    max-width: auto;
+    max-height: auto;
+    border: 10px;
     overflow: hidden;
     background-color:bisque;
     padding: 5px;
-    margin: 5px;    
+    margin: 5px; 
 }
 .rest1:hover{
     border: 1px solid black;
@@ -41,7 +40,66 @@
     display: flex;
     flex-wrap: wrap;
 }
-.img1{
-    width: 300px;
     
+
+.filter{
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    
+}
+.button{
+    cursor: pointer;
+}
+
+.img1{
+    width: auto;
+    height: auto;
+    
+}
+.button{
+    display: flex;
+    height: 50px;
+
+}
+.btn{
+    margin: 0px 20px;
+    padding: 5px;
+    cursor: pointer;
+}
+.searchbutton{
+    display: flex;
+    cursor: pointer;
+}
+.searchbox{
+    margin: 20px;
+    display: flex;
+    
+}
+.shimmer-card{
+    margin: 20px;
+    width: 600px;
+    height: 600px;
+    background-color:#f0f0f0;
+    border: 2px solid black;
+    cursor: pointer;
+}
+.shimmer{
+    display: flex;
+    flex-wrap: wrap;
+}
+.error{
+    font-style: italic;
+    font-size: xx-small;
+}
+
+.menu-header{
+
+    
+    margin-bottom: 50px;
+    border: 10pxx salmon;
+}
+.about{
+    padding: 10px;
+    border: 1px solid black;
 }
