--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-.html{
+@import "tailwindcss";
+/* .html{
     background-color: azure;
 }
 
@@ -14,14 +15,16 @@
 }
 .nav-items>ul{
     display: flex;
-    padding: 10px;
-    font-size: 24px;
-}
-.nav-items>ul>li{
+    flex-wrap: wrap;
     padding: 10px;
     margin: 10px;
-    font-size: large;
+    font-size: x-large;
+}
+.nav-items>ul>li{
+    
+    font-size: medium;
     list-style-type: none;
+    margin: 50px;
 }
 .rest1{
     max-width: auto;
@@ -39,14 +42,7 @@
 .rest-cards{
     display: flex;
     flex-wrap: wrap;
-}
-    
-
-.filter{
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    
+    margin-top: 75px;
 }
 .button{
     cursor: pointer;
@@ -62,20 +58,13 @@
     height: 50px;
 
 }
-.btn{
+.login{
     margin: 0px 20px;
     padding: 5px;
     cursor: pointer;
 }
-.searchbutton{
-    display: flex;
-    cursor: pointer;
-}
-.searchbox{
-    margin: 20px;
-    display: flex;
-    
-}
+
+
 .shimmer-card{
     margin: 20px;
     width: 600px;
@@ -93,14 +82,23 @@
     font-size: xx-small;
 }
 
-.menu-header{
-
-    
-    margin-bottom: 50px;
-    border: 10pxx salmon;
-}
 .about{
     padding: 10px;
     border: 1px solid black;
     width: fit-content;
 }
+.filter{
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.searchbox{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.menu-top{
+    padding: 10px;
+    margin: 10px;
+    border: 10px orange ;
+} */
